# MyAndroid

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: activity_enter.xml  activity_exit.xml
app/src/main/res/layout/: activity_animation_01.xml  activity_apply_right.xml  activity_basics.xml  activity_cance_timeout.xml  activity_databinding.xml  activity_downloadmanager.xml  activity_kotlin.xml  activity_main.xml  activity_network.xml  fragment_met.xml  (+22 more)
arcore/: build.gradle
arcore/src/main/: AndroidManifest.xml
arcore_test/src/main/: AndroidManifest.xml
cpp_exercise/: build.gradle
cpp_exercise/src/main/: AndroidManifest.xml
cpp_exercise/src/main/cpp/: CMakeLists.txt  a_extern.cpp  exercise01.cpp
cpp_exercise/src/main/cpp/include/: a_extern.h
doublenetwork/: README.md  build.gradle
doublenetwork/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hello-jni/: README.md  build.gradle
hello-jni-callback/: README.md  build.gradle
hello-jni-callback/src/main/: AndroidManifest.xml
hello-jni-callback/src/main/cpp/: hello-jnicallback.c
hello-jni/src/main/: AndroidManifest.xml
hello-jni/src/main/cpp/: CMakeLists.txt  hellojni.c  hellojni.cpp
import_static_with_depend/: README.md  build.gradle
import_static_with_depend/src/main/: AndroidManifest.xml
import_static_with_depend/src/main/cpp/: CMakeLists.txt  test.cpp
import_static_with_depend/src/main/cpp/lib/include/: static-lib.h
oss_speed_test/: build.gradle
oss_speed_test/src/main/: AndroidManifest.xml
staticlib/: README.md  build.gradle
staticlib/src/main/: AndroidManifest.xml
staticlib/src/main/cpp/: CMakeLists.txt  static-lib.cpp
staticlib/src/main/cpp/lib/include/: Bdd.h
(+130 files in other folders)
